# gnuais

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  config.h.in  configure  configure.in  create_table.sql  create_table.txt  createdeb.sh  gnuais.conf-example  gnuais_0.3.2.orig.tar.gz.delta  gnuais_0.3.2.orig.tar.gz.id  gnuais_0.3.3.orig.tar.gz.delta  gnuais_0.3.3.orig.tar.gz.id
debian/: README.Debian  README.source  changelog  control  copyright  cron.d.ex  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  gbp.conf  gnuais.1  gnuais.default.ex  gnuais.doc-base.EX  gnuais.docs  gnuais.examples  gnuais.install  gnuais.manpages  gnuais.menu  gnuaisgui.1  gnuaisgui.docs  gnuaisgui.install  gnuaisgui.manpages  gnuaisgui.menu  gnuaisgui.xpm  init.d.ex  init.d.lsb.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch  watch.ex
debian/patches/: 01_conf_location.patch  02_cflags.patch  02_fix_inline_functions.patch  backtoosminubuntu.patch  infomessage.patch  series  workaround_for_missing_pc_file.patch
debian/upstream/: signing-key.asc
src/: CMakeLists.txt  Makefile.am  Makefile.in  ais.c  ais.h  aisfromfile.c  cache.c  cache.h  cfg.c  cfg.h  cfgfile.c  cfgfile.h  config.h  crc32.c  filter-i386.h  filter.c  filter.h  gnuais.conf  hlog.c  hlog.h  hmalloc.c  hmalloc.h  input.c  input.h  ipc.c  ipc.h  out_json.c  out_json.h  out_mysql.c  out_mysql.h  protodec.c  protodec.h  pulseaudio.c  pulseaudio.h  range.c  range.h  receiver.c  receiver.h  rwlock.c  savetofile.c  (+6 more)
src/gui/: CMakeLists.txt  Makefile.am  Makefile.in  README  gui.c  map.cbr  osm-gps-map-ais.c  osm-gps-map-ais.h  waterford.cbr  waterford2.cbr
src/testmessages/: 1.num  4.num  README
testmessages/: 2.num  3.num  Makefile  README  gnuais-stereo-2rx.txt  tobinary.c
